# signal-composer-binding

./: .gitignore  .gitmodules  .gitreview  CMakeLists.txt  Doxyfile  MAINTAINERS  README.md  book.json  gendocs.sh
_plugin_template/: CMakeLists.txt  README.md  control-signal-composer-config.json.in  generated_plugin.cpp
conf.d/cmake/: 00-debian-osconfig.cmake  00-default-osconfig.cmake  00-suse-config.cmake  config.cmake  low-can.c
conf.d/project/data/: CMakeLists.txt  unit-conversion.lua
conf.d/project/etc/: CMakeLists.txt  control-basic-conf.json  control-daemon.json  control-signal-composer-config.json.in  control-signal-composer.json  control-txc-demo.json  init-daemon.json  sig-demoboard.json  sig-doors.json  sig-geoloc.json  sig-sources.json  sig-steering-wheel.json  sig-txc.json  sources-basic.json  sources-txc.json  sources.json
conf.d/project/lua.d/: init-daemon-03-controls.lua  init-daemon-04-oncall.lua  onload-daemon-04-oncall.lua  signal-composer-daemon-01-init.lua  signal-composer-daemon-04-oncall.lua
conf.d/wgt/: config.xml.in
conf.d/xds/: xds-config.env
controller/: CMakeLists.txt  ctl-action.c  ctl-config.c  ctl-config.h  ctl-lua.c  ctl-lua.h  ctl-onload.c  ctl-plugin.c  ctl-plugin.h  ctl-timer.c  ctl-timer.h
docs/: 0-Doc-Revisions.md  README.md  SUMMARY.md  api-services-book.yml
docs/part-1/: 0_Abstract.md  1-Architecture.md  2-Configuration.md  3-Plugins.md  4-SignalComposerAPI.md
low-can/: CMakeLists.txt  doors.c
plugins/: CMakeLists.txt  builtin.cpp  gps.c  gps.cpp  low-can.c  low-can.cpp  lua2c-interface.c  lua2c-interface.cpp
signal-composer-binding/: CMakeLists.txt  clientApp.cpp  clientApp.hpp  ctl-dispatch.c  ctl-lua.c  ctl-lua.h  observer-pattern.hpp  observer.hpp  signal-composer-apidef.h  signal-composer-apidef.json  signal-composer-binding-apidef.json  signal-composer-binding-apidef.json.in  signal-composer-binding.cpp  signal-composer-binding.hpp  signal-composer.cpp  signal-composer.hpp  signal-conf.hpp  signal.cpp  signal.hpp  source.cpp  source.hpp
test/: CMakeLists.txt  afb-test.sh
test/afb-test/: CMakeLists.txt
test/afb-test/etc/: CMakeLists.txt  aft-signal-composer_config.json
test/afb-test/fixtures/: CMakeLists.txt  sig_incomplete.json  sig_test.json  sig_testInvalid.json  source.json  sources_invalid.json
test/afb-test/fixtures/txc-binding/: CMakeLists.txt  txc-binding.c
test/afb-test/tests/: CMakeLists.txt  signal-composer_BasicAPITest.lua
